ТЗ 08-4 Блок Обратная связь

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <nav>
                         <ul class="block01__menu">
-                            <div class="line1">
+                            <ul class="line1">
                                 <li><a class="line1 link-white" href="tel:+78003551256">+7 (800) 355 12-56</a></li>
                                 <li><a class="line1 link-white" href="mailto:kino@innopolis.ru">kino@innopolis.ru</a>
                                 </li>
@@ -59,15 +59,15 @@
                                         </svg>
                                     </a>
                                 </li>
-                            </div>
-                            <div class="line2">
+                            </ul>
+                            <ul class="line2">
                                 <li><a class="line2 why" href="#whyarewe">Почему Мы?</a></li>
                                 <li><a class="line2 movie" href="#selectamovie">Выберите фильм</a></li>
                                 <li><a class="line2 gift" href="#agiftToEveryone">Подарок каждому</a></li>
                                 <li><a class="line2 film" href="#films">Фильмы</a></li>
                                 <li><a class="line2 goods" href="#goods">Товары</a></li>
                                 <li><a class="line2 contact" href="#contact">Контакты</a></li>
-                            </div>
+                            </ul>
                         </ul>
                     </nav>
                 </header>
@@ -80,18 +80,26 @@
             </div>
         </div>
     </div>
-    <div class="block02">
-        <div class="block02__descr">
+    <div class=" container3">
+        <div class="block02__wrap">
+            <div class="block02">
+                <div class="block02__descr">
 
-            <div class="block02__text1"><strong>Добро пожаловать</strong></div>
+                    <div class="block02__text1"><strong>Добро пожаловать</strong></div>
 
-            <div class="block02__text2">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem ab accusantium deleniti soluta possimus
-                magnam saepe minus! Obcaecati, consectetur illum! Consequatur commodi minus nostrum explicabo, provident
-                assumenda molestiae deserunt aliquid!
-                Earum maiores quaerat autem rerum incidunt. Aperiam natus, ex cupiditate quod repellat quaerat corporis
-                expedita incidunt, in iste possimus consequuntur, perspiciatis nemo laboriosam sunt? Est sapiente
-                aspernatur culpa blanditiis rerum?
+                    <div class="block02__text2">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem ab accusantium deleniti soluta
+                        possimus
+                        magnam saepe minus! Obcaecati, consectetur illum! Consequatur commodi minus nostrum explicabo,
+                        provident
+                        assumenda molestiae deserunt aliquid!
+                        Earum maiores quaerat autem rerum incidunt. Aperiam natus, ex cupiditate quod repellat quaerat
+                        corporis
+                        expedita incidunt, in iste possimus consequuntur, perspiciatis nemo laboriosam sunt? Est
+                        sapiente
+                        aspernatur culpa blanditiis rerum?
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -473,8 +481,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
     </div>
     </div>
@@ -490,24 +496,30 @@
             </div>
             <div class="block07__list">
                 <div class="block07__item">
-                    <img src="images/coca-cola.jpg" alt="">
-                    <div class="block07__common">
-                        <div class="block07__bg"></div>
-                        <div class="block07__abs">Coca-cola</div>
+                    <div class="block07__wrap">
+                        <img src="images/coca-cola.jpg" alt="">
+                        <div class="block07__common">
+                            <div class="block07__bg"></div>
+                            <div class="block07__abs">Coca-cola</div>
+                        </div>
                     </div>
                 </div>
                 <div class="block07__item">
-                    <img src="images/brelok.jpg" alt="">
-                    <div class="block07__common">
-                        <div class="block07__bg"></div>
-                        <div class="block07__abs">Брелок “Железный человек”</div>
+                    <div class="block07__wrap">
+                        <img src="images/brelok.jpg" alt="">
+                        <div class="block07__common">
+                            <div class="block07__bg"></div>
+                            <div class="block07__abs">Брелок “Железный человек”</div>
+                        </div>
                     </div>
                 </div>
                 <div class="block07__item">
-                    <img src="images/poster.jpg" alt="">
-                    <div class="block07__common">
-                        <div class="block07__bg"></div>
-                        <div class="block07__abs">Постер “Мстители”</div>
+                    <div class="block07__wrap">
+                        <img src="images/poster.jpg" alt="">
+                        <div class="block07__common">
+                            <div class="block07__bg"></div>
+                            <div class="block07__abs">Постер “Мстители”</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -522,115 +534,129 @@
                 architecto?
             </div>
             <div class="block08__review">
-            <div class="block08__review1">
-                <div class="block08__bg1"></div>
-                <div class="block08__descr1">
-                    <div class="block08__text2">Елена Еленова</div>
-                    <div class="block08__text3">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis quas quidem,
-                        veritatis rem omnis temporibus harum maxime deleniti cum animi, tempora est! Ad quia id
-                        inventore ex soluta numquam!
+                <div class="block08__review1">
+                    <div class="block08__bg1"></div>
+                    <div class="block08__descr1">
+                        <div class="block08__text2">Елена Еленова</div>
+                        <div class="block08__text3">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis quas quidem,
+                            veritatis rem omnis temporibus harum maxime deleniti cum animi, tempora est! Ad quia id
+                            inventore ex soluta numquam!
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="block08__review">
+                <div class="block08__review2">
+                    <div class="block08__bg2"></div>
+                    <div class="block08__descr2">
+                        <div class="block08__text4">Борис Борисов</div>
+                        <div class="block08__text5">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis quas quidem,
+                            veritatis rem omnis temporibus harum maxime deleniti cum animi, tempora est! Ad quia id
+                            inventore ex soluta numquam!
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="block08__review">
+                <div class="block08__review3">
+                    <div class="block08__bg3"></div>
+                    <div class="block08__descr3">
+                        <div class="block08__text6">Леонардо Дикаприо</div>
+                        <div class="block08__text7">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis quas quidem,
+                            veritatis rem omnis temporibus harum maxime deleniti cum animi, tempora est! Ad quia id
+                            inventore ex soluta numquam!
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="block08__review">
-            <div class="block08__review2">
-                <div class="block08__bg2"></div>
-                <div class="block08__descr2">
-                    <div class="block08__text4">Борис Борисов</div>
-                    <div class="block08__text5">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis quas quidem,
-                        veritatis rem omnis temporibus harum maxime deleniti cum animi, tempora est! Ad quia id
-                        inventore ex soluta numquam!
-                    </div>
+
+    </div>
+    </div>
+    <div class="block09">
+        <div class="block09__bg">
+            <img src="images/block09.jpg" alt="">
+            <div class="block09__dscr">
+                <div class="block09__text1"><strong>Обратная связь</strong></div>
+                <div class="block09__text2">
+                    <form action="/order">
+                        <input class="block09__text2-name" type="text" value="" placeholder="Полное имя" name="Name">
                 </div>
+                <div class="block09__text3">
+                    <select class="block09__text3-places" name="">
+                        <option value="Номер места">Номер места</option>
+                        <option value="Место 1">1</option>
+                        <option value="Место 2">2</option>
+                        <option value="Место 3">3</option>
+                        <option value="Место 4">4</option>
+                        <option value="Место 5">5</option>
+                        <option value="Место 6">6</option>
+                        <option value="Место 7">7</option>
+                        <option value="Место 8">8</option>
+                        <option value="Место 9">9</option>
+                        <option value="Место 10">10</option>
+                    </select>
+
+                </div>
+                <div class="block09__text4">
+                    <textarea class="block09__text4-review" name="" id="" placeholder="Напишите свой отзыв"></textarea>
+                </div>
+                <div class="block09__text5">
+                    <input type="checkbox" id="checkbox">
+                    <label class="block09__text5-chekbox" for="checkbox"> Я согласен на обработку своих персональных
+                        данных</label>
+                </div>
+
+                <button class="block09__text6" type="submit">Заказать</button>
+
+                </form>
             </div>
         </div>
-        <div class="block08__review">
-            <div class="block08__review3">
-                <div class="block08__bg3"></div>
-                <div class="block08__descr3">
-                    <div class="block08__text6">Леонардо Дикаприо</div>
-                    <div class="block08__text7">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis quas quidem,
-                        veritatis rem omnis temporibus harum maxime deleniti cum animi, tempora est! Ad quia id
-                        inventore ex soluta numquam!
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-    </div>
-    </div>
-    <div>
-        <p><strong>Обратная связь</strong></p>
-        <form action="/order">
-            <input type="text" value="" placeholder="Полное имя" name="Name">
-            <div>
-                <select name="">
-                    <option value="Номер места">Номер места</option>
-                    <option value="Место 1">1</option>
-                    <option value="Место 2">2</option>
-                    <option value="Место 3">3</option>
-                    <option value="Место 4">4</option>
-                    <option value="Место 5">5</option>
-                    <option value="Место 6">6</option>
-                    <option value="Место 7">7</option>
-                    <option value="Место 8">8</option>
-                    <option value="Место 9">9</option>
-                    <option value="Место 10">10</option>
-                </select>
-
-            </div>
-            <div>
-                <input type="checkbox" id="checkbox">
-                <label for="checkbox"> Я согласен на обработку своих персональных данных</label>
-            </div>
-
-            <textarea name="" id="" placeholder="text"></textarea>
-            <button type="submit">Заказать</button>
-
-        </form>
+    <div class="block10">
+        <img src="https://via.placeholder.com/973x420?text=973%20x%20420" alt="">
     </div>
     <footer>
-        <div>
-            <div>INNOPOLIS UNIVERSITY</div>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum facere esse id perspiciatis est
-                eius velit, dicta quibusdam aperiam tenetur? Voluptas laboriosam dolores delectus deserunt, dolore
-                sunt
-                dignissimos consectetur quae.
-                Nihil unde modi voluptatem obcaecati enim odio fugiat, debitis est facilis fuga tenetur saepe
-                explicabo
-                iure beatae perspiciatis in consectetur. Aliquam tempore, aperiam vel beatae iste voluptatibus quasi
-                mollitia pariatur!
-                Dicta architecto tempore quisquam quia ex libero rem! Iusto assumenda dicta quis ullam explicabo
-                laudantium, tempore repellendus quos facere est dolor ea quidem harum magni? Eaque maiores debitis
-                facere quos!
-                Dolor quisquam aperiam iste soluta commodi suscipit, praesentium cum necessitatibus sed minus vero
-                atque
-                laudantium natus, eos laboriosam? Perspiciatis itaque quibusdam doloremque ab porro illum rerum
-                nihil
-                numquam mollitia consequatur!
-            </p>
-            <div>SAITE</div>
-            <div>
-                <a style="display: table;" href="#" target="_blank">Почему мы?</a>
-                <a style="display: table;" href="#" target="_blank">Выберите фильм</a>
-                <a style="display: table;" href="#" target="_blank">Фильмы</a>
-                <a style="display: table;" href="#" target="_blank">Товары</a>
-                <a style="display: table;" href="#" target="_blank">CONTACT</a>
-
+        <div class="block11">
+            <div class="block11__footer">
+                <div class="block11__col1">
+                    <div class="block11__logo">
+                        <a href="https://innopolis.university/" target="https://innopolis.university/"></a>
+                        <svg class="logo">
+                            <use xlink:href="#ico-logo"></use>
+                        </svg>
+                    </div>
+                    <div class="block11__text1">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatem enim laudantium atque
+                        quia fugiat nihil deleniti dicta! Eligendi quis repudiandae voluptatibus ducimus commodi vel
+                        libero ut. Dolores, porro dolore?
+                    </div>
+                </div>
+                <div class="block11__col2">
+                    <div class="block11__saite">SAITE</div>
+                    <ul class="block11__saite-href">
+                        <li><a style="display: table;" href="#" target="_blank">Почему мы?</a></li>
+                        <li><a style="display: table;" href="#" target="_blank">Выберите фильм</a></li>
+                        <li><a style="display: table;" href="#" target="_blank">Фильмы</a></li>
+                        <li><a style="display: table;" href="#" target="_blank">Товары</a></li>
+                        <li><a style="display: table;" href="#" target="_blank">CONTACT</a></li>
+                    </ul>
+                </div>
+                <div class="block11__col3">
+                    <div class="block11_contact">CONTACT</div>
+                    <div class="block11_contact-info">
+                        <div class="block11_text1">+7 (800) 355 12-56 </div>
+                        <a style="display:table" href="#" target="_blank">kino@innopolis.ru</a>
+                        <div>420500, г. Иннополис ул.Университетская, д.1</div>
+                        <a style="display: table" href="#" target="_blank">Как добраться</a>
+                        <a style="display: table" href="#" target="_blank">Все конакты</a>
+                    </div>
+                </div>
             </div>
-            <div>CONTACT</div>
-            <div>
-                <span>+7 (800) 355 12-56 </span>
-                <a style="display:table" href="#" target="_blank">kino@innopolis.ru</a>
-                <span>420500, г. Иннополис ул.Университетская, д.1</span>
-                <a style="display: table" href="#" target="_blank">Как добраться</a>
-                <a style="display: table" href="#" target="_blank">Все конакты</a>
-            </div>
+        </div>
         </div>
     </footer>
     <svg class="logo">
