--- a/index.html
+++ b/index.html
@@ -638,22 +638,23 @@
                 <div class="block11__col2">
                     <div class="block11__saite">SAITE</div>
                     <ul class="block11__saite-href">
-                        <li><a style="display: table;" href="#" target="_blank">Почему мы?</a></li>
-                        <li><a style="display: table;" href="#" target="_blank">Выберите фильм</a></li>
-                        <li><a style="display: table;" href="#" target="_blank">Фильмы</a></li>
-                        <li><a style="display: table;" href="#" target="_blank">Товары</a></li>
-                        <li><a style="display: table;" href="#" target="_blank">CONTACT</a></li>
+                        <li><a class="block11__saite-white" href="#" target="_blank">EVENT DETAILS</a></li>
+                        <li><a class="block11__saite-white" href="#" target="_blank">SPEAKERS</a></li>
+                        <li><a class="block11__saite-white" href="#" target="_blank">SPONSORS</a></li>
+                        <li><a class="block11__saite-white" href="#" target="_blank">PAST EVENTS</a></li>
+                        <li><a class="block11__saite-white" href="#" target="_blank">CONTACT</a></li>
                     </ul>
                 </div>
                 <div class="block11__col3">
                     <div class="block11_contact">CONTACT</div>
-                    <div class="block11_contact-info">
-                        <div class="block11_text1">+7 (800) 355 12-56 </div>
-                        <a style="display:table" href="#" target="_blank">kino@innopolis.ru</a>
-                        <div>420500, г. Иннополис ул.Университетская, д.1</div>
-                        <a style="display: table" href="#" target="_blank">Как добраться</a>
-                        <a style="display: table" href="#" target="_blank">Все конакты</a>
-                    </div>
+                    <ul class="block11__info">
+                        <li><a class="block11__white" href="tel:+78003551256">+7 (800) 355 12-56</a></li>
+                        <li><a class="block11__white" href="mailto:kino@innopolis.ru">kino@innopolis.ru</a></li>
+                        <li><a class="block11__white" href="#">420500, г. Иннополис ул.Университетская, д.1</a></li>
+                        <li><a class="block11__white" href="#">Как добраться</a></li>
+                        <li><a class="block11__white" href="#">Все контакты</a></li>
+
+                    </ul>
                 </div>
             </div>
         </div>
