ТЗ-10 Резиновая верстка

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                         </a>
                     </div>
                     <nav class="block01__info">
-                        <ul class="block01__menu">
-                            <li class="line1">
+                        <ul class="block01__menu1">
                             <li><a class="line1 link-white" href="tel:+78003551256">+7 (800) 355 12-56</a></li>
                             <li><a class="line1 link-white" href="mailto:kino@innopolis.ru">kino@innopolis.ru</a>
                             </li>
@@ -59,18 +58,16 @@
                                     </svg>
                                 </a>
                             </li>
-                            </li>
-                            </ul>
-                            <ul class="block01__menu">
-                                <li class="line2">
-                                <li><a class="line2 why" href="#whyarewe">Почему Мы?</a></li>
-                                <li><a class="line2 movie" href="#selectamovie">Выберите фильм</a></li>
-                                <li><a class="line2 gift" href="#agiftToEveryone">Подарок каждому</a></li>
-                                <li><a class="line2 film" href="#films">Фильмы</a></li>
-                                <li><a class="line2 goods" href="#goods">Товары</a></li>
-                                <li><a class="line2 contact" href="#contact">Контакты</a></li>
-                                </li>
-                            </ul>
+                           
+                        </ul>
+                        <ul class="block01__menu2">
+                            <li><a class="line2 why" href="#whyarewe">Почему Мы?</a></li>
+                            <li><a class="line2 movie" href="#selectamovie">Выберите фильм</a></li>
+                            <li><a class="line2 gift" href="#agiftToEveryone">Подарок каждому</a></li>
+                            <li><a class="line2 film" href="#films">Фильмы</a></li>
+                            <li><a class="line2 goods" href="#goods">Товары</a></li>
+                            <li><a class="line2 contact" href="#contact">Контакты</a></li>
+                        </ul>
                     </nav>
                 </header>
                 <div class="zagolovok1">
@@ -90,16 +87,19 @@
                     <div class="block02__text1"><strong>Добро пожаловать</strong></div>
 
                     <div class="block02__text2">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem ab accusantium deleniti soluta
-                        possimus
-                        magnam saepe minus! Obcaecati, consectetur illum! Consequatur commodi minus nostrum explicabo,
-                        provident
-                        assumenda molestiae deserunt aliquid!
-                        Earum maiores quaerat autem rerum incidunt. Aperiam natus, ex cupiditate quod repellat quaerat
-                        corporis
-                        expedita incidunt, in iste possimus consequuntur, perspiciatis nemo laboriosam sunt? Est
-                        sapiente
-                        aspernatur culpa blanditiis rerum?
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem ab accusantium deleniti soluta
+                            possimus
+                            magnam saepe minus! Obcaecati, consectetur illum! Consequatur commodi minus nostrum
+                            explicabo,
+                            provident
+                            assumenda molestiae deserunt aliquid!
+                        </p>
+                        <p> maiores quaerat autem rerum incidunt. Aperiam natus, ex cupiditate quod repellat quaerat
+                            corporis
+                            expedita incidunt, in iste possimus consequuntur, perspiciatis nemo laboriosam sunt? Est
+                            sapiente
+                            aspernatur culpa blanditiis rerum?
+                        </p>
                     </div>
                 </div>
             </div>
@@ -316,29 +316,32 @@
             <div class="block05__descr">
                 <div class="block05__text1">Подарок каждому</div>
                 <div class="block05__text2">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ex facilis in. Aliquid minus
-                    rerum
-                    vero
-                    iusto, maiores neque aperiam laudantium corporis vitae nostrum, tempore labore doloribus nam
-                    perspiciatis
-                    velit.
-                    Quasi, laborum vel nisi, excepturi in dolorum nihil mollitia odit odio ipsum facere aliquam
-                    totam
-                    maxime
-                    veritatis consequuntur magni id. Vel expedita reprehenderit eius ipsam corporis ex ratione
-                    fugiat
-                    magnam!
-                    Inventore perspiciatis recusandae quidem sit assumenda, nesciunt, necessitatibus quas nostrum
-                    hic
-                    ducimus
-                    modi a quae rem quibusdam culpa expedita fugit eum saepe quam suscipit. Saepe praesentium dolore
-                    adipisci
-                    eaque aperiam.
-                    Repellat, molestiae quisquam iste earum mollitia neque quidem quos vitae excepturi a sunt soluta
-                    voluptates
-                    hic dignissimos! Deleniti harum facere quisquam omnis quam nisi sed consequuntur in ratione.
-                    Fuga,
-                    iusto!
+                    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ex facilis in. Aliquid minus
+                        rerum
+                        vero
+                        iusto, maiores neque aperiam laudantium corporis vitae nostrum, tempore labore doloribus nam
+                        perspiciatis
+                        velit.
+                    </p>
+                    <p> Quasi, laborum vel nisi, excepturi in dolorum nihil mollitia odit odio ipsum facere aliquam
+                        totam
+                        maxime
+                        veritatis consequuntur magni id. Vel expedita reprehenderit eius ipsam corporis ex ratione
+                        fugiat
+                        magnam!
+                    </p>
+                    <p>Inventore perspiciatis recusandae quidem sit assumenda, nesciunt, necessitatibus quas nostrum
+                        hic
+                        ducimus
+                        modi a quae rem quibusdam culpa expedita fugit eum saepe quam suscipit. Saepe praesentium dolore
+                        adipisci
+                        eaque aperiam.
+                        Repellat, molestiae quisquam iste earum mollitia neque quidem quos vitae excepturi a sunt soluta
+                        voluptates
+                        hic dignissimos! Deleniti harum facere quisquam omnis quam nisi sed consequuntur in ratione.
+                        Fuga,
+                        iusto!
+                    </p>
                 </div>
                 <button class="block05__text3">Получить подарок</button>
             </div>
