--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                         </ul>
                     </nav>
                 </header>
-                <div class="zagolovok1">
-                    <div class="zagolovok1 h1">
+                <div class="subject">
+                    <div class="subject h1">
                         <h1>Закажите билет в кино</h1>
                     </div>
-                    <div class="zagolovok1__podzog">Всем покупателям подарок!</div>
+                    <div class="subtitle">Всем покупателям подарок!</div>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
         </div>
     </div>
     <div class="container3">
-        <h2>Почему мы?</h2>
+        <div class="text">Почему мы?</div>
         <div id="why_are_we?"></div>
         <div class="block03">
             <div class="row1">
@@ -186,7 +186,7 @@
                 </div>
             </div>
         </div>
-        <h3>Выберите фильм</h3>
+        <div class="text">Выберите фильм</div>
         <div class="block04">
             <table class="movie-table">
                 <thead>
@@ -349,7 +349,7 @@
     </div>
     <div class="container3">
         <div id="films"></div>
-        <h4>Фильмы</h4>
+        <div class="text h2">Фильмы</div>
         <div class="films__text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet perspiciatis esse cum nihil eligendi
             delectus, neque corrupti aliquid quae. Facilis repellat quam dolorum, officia sunt beatae. Obcaecati
@@ -490,7 +490,7 @@
     <div class="container3">
         <div class="block07__goods">
             <div id="goods"></div>
-            <h5><strong>Товары</strong></h5>
+            <div class="text"><strong>Товары</strong></div>
             <div class="block07__text1">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet illum facilis beatae eligendi error.
                 Dolore
@@ -530,7 +530,7 @@
     </div>
     <div class="block08">
         <div class="container3">
-            <h6><strong>Отзывы</strong></h6>
+            <div class="text"><strong>Отзывы</strong></div>
             <div class="block08__text1">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus commodi qui explicabo ad quidem corporis
                 dolore natus tempore animi, aliquid, ea facere veniam soluta in voluptatibus doloremque voluptate quos
@@ -587,8 +587,8 @@
                             placeholder="Напишите свой отзыв"></textarea>
                     </div>
                     <div class="block09__text5">
-                        <input type="checkbox" id="checkbox">
-                        <label class="block09__text5-chekbox" for="checkbox"> Я согласен на обработку своих
+                        <input class="block09__check" type="checkbox" id="checkbox">
+                        <label class="block09__text5-checkbox" for="checkbox"> Я согласен на обработку своих
                             персональных
                             данных</label>
                     </div>
@@ -689,9 +689,6 @@
         </div>
 
     </footer>
-    <svg class="logo">
-        <use xlink:href="#ico-logo"></use>
-    </svg>
     <svg style="display: none;">
         <symbol id="ico-logo" viewBox="0 0 156 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
