ТЗ-13-02 Адаптивная верстка

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                             <span></span>
                         </div>
                         <div class="block01__mobile-menu block01__mobile-menu_closed">
+                            <div class="close">
+                                <svg width="1.35rem" height="1.35rem" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.38838 27C1.03272 27 0.677068 26.8647 0.406851 26.5925C-0.135617 26.05 -0.135617 25.1705 0.406851 24.6281L24.6281 0.406851C25.1705 -0.135617 26.05 -0.135617 26.5925 0.406851C27.1349 0.949319 27.1349 1.8288 26.5925 2.3716L2.3716 26.5925C2.09935 26.863 1.7437 27 1.38838 27Z" fill="#A3CC40"/>
+                                    <path d="M25.6113 27C25.2556 27 24.9003 26.8647 24.6298 26.5925L0.406851 2.3716C-0.135617 1.8288 -0.135617 0.949319 0.406851 0.406851C0.94932 -0.135617 1.8288 -0.135617 2.3716 0.406851L26.5925 24.6281C27.1349 25.1705 27.1349 26.05 26.5925 26.5925C26.3202 26.863 25.9649 27 25.6113 27Z" fill="#A3CC40"/>
+                                    </svg>
+                                    
+                                    
+                            </div>
                             <ul class="block01__menu1">
                                 <li><a class="line1 link-white" href="tel:+78003551256">+7 (800) 355 12-56</a></li>
                                 <li><a class="line1 link-white" href="mailto:kino@innopolis.ru">kino@innopolis.ru</a>
